[tool.poetry]
name = "where_can_i_find_it"
version = "0.0.1"
description = "App to search for movies/tv shows online availability."
authors = [
    "Prateek Pisat <pisatprateek12@gmail.com>"
]

readme = "README.md"

packages = [
    { include = "where_can_i_find_it", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

# homepage = "https://python-poetry.org/"
# repository = "https://github.com/python-poetry/poetry"
# documentation = "https://python-poetry.org/docs"

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = "^3.7.2"
configly = {version = "^0.2.2", extras = ["yaml"]}
pendulum = "^2.1.2"
Flask = "^2.0.2"



[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
responses = "^0.16.0"

[tool.flake8]
line_length = 100

[tool.black]
line_length = 100

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 100
multi_line_output = 3
order_by_type = false
known_first_party = 'tests'
known_standard_library = 'dataclasses'
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"